--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height DONE--
 <body>
     <h1>Lau Fj's Portfolio</h1>
 
-    <h2>I'm a designer and a web developer</h2>
+    <h2>I'm a designer and (will become) a web developer</h2>
 
     <hr />
 
