--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,7 @@
 <h1>Contact Me</h1>
-<p>Tel: +57 (319) 305 2683</p>
-<p>Email: lacfajardopo@unal.edu.co</p>
-<p>Address:</p>
-<p>
-  Remote<br />
-  Mainly in Bogotá<br />
-  Colombia <br />
-</p>
+
+ <ol>
+   <li><a href="https://wa.link/8zxt25">Whatsapp</a></li>
+   <li><a href="mailto:lacfajardopo@unal.edu.co?subject=I%20saw%20your%20CV&body=Hi%20Laura%2C%0A%0AI'm%20contacting%20you%20regarding...">Email</a></li>
+    <li><a href="https://www.linkedin.com/in/lau-fj/">LinkedIn</a></li>
+  </ol>
